--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
       <nav class="main-nav">
 
-        <a href="./" class="logo">Web<span class="logo__studio--black">Studio</span></a>
+        <a href="./" class="logo">Web<span class="page-header__logo--black">Studio</span></a>
 
         <button type="button" class="menu-button " data-menu-button>
 
-          <svg class="icon-mobile" width="40px" height="40px" aria-label="переключатель мобильного меню">
+          <svg class="menu-button__icon" width="40px" height="40px" aria-label="переключатель мобильного меню">
 
-            <use class="icon-menu" href="./images/symbol-defs.svg#icon-menu40px"></use>
-            <use class="icon-cross" href="./images/symbol-defs.svg#icon-close40px"></use>
+            <use class="menu-button__icon--menu" href="./images/symbol-defs.svg#icon-menu40px"></use>
+            <use class="menu-button__icon--cross" href="./images/symbol-defs.svg#icon-close40px"></use>
 
           </svg>
 
@@ -39,15 +39,15 @@
           <ul class="site-nav">
 
             <li class="site-nav__item">
-              <a href="" class="link site-nav__link current">Студия</a>
+              <a href="" class="link site-nav__link--active current">Студия</a>
             </li>
 
             <li class="site-nav__item">
-              <a href="./portfolio.html" class="link site-nav__link">Портфолио</a>
+              <a href="./portfolio.html" class="link site-nav__link--active">Портфолио</a>
             </li>
 
             <li class="site-nav__item">
-              <a href="" class="link site-nav__link">Контакты</a>
+              <a href="" class="link site-nav__link--active">Контакты</a>
             </li>
 
           </ul>
