--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
   <main>
     <section class="main-hero">
 
-      <div class="hero-item">
+      <div class="main-hero__item">
         <div>
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="main-hero__title">Эффективные решения для вашего бизнеса</h1>
         </div>
         <div>
-          <button type="button" class="service" data-modal-open>
+          <button type="button" class="main-hero__botton" data-modal-open>
             Заказать услугу
           </button>
         </div>
@@ -96,63 +96,91 @@
     <!-- О нас -->
 
     <section class="about-us">
+
       <div class="container">
-        <ul class="advant-comp">
-          <li class="comp-item">
-            <div class="icon-container">
-              <svg class="icon-about_as" width="70" height="70">
+
+        <ul class="about-us__list">
+
+          <li class="about-us__item">
+
+            <div class="about-us__icon-container">
+
+              <svg width="70" height="70">
                 <use href="./images/symbol-defs.svg#icon-antenna"></use>
               </svg>
+
             </div>
 
-            <h2 class="section-title">ВНИМАНИЕ К ДЕТАЛЯМ</h2>
-            <p class="text">
+            <h2 class="about-us__title">ВНИМАНИЕ К ДЕТАЛЯМ</h2>
+
+            <p class="about-us__text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
+
           </li>
 
-          <li class="comp-item">
-            <div class="icon-container">
-              <div class="icon-container"></div>
-              <svg class="icon-about_as" width="70" height="70">
+          <li class="about-us__item">
+
+            <div class="about-us__icon-container">
+
+              <svg width="70" height="70">
                 <use href="./images/symbol-defs.svg#icon-clock"></use>
               </svg>
+
             </div>
-            <h2 class="section-title">ПУНКТУАЛЬНОСТЬ</h2>
-            <p class="text">
+
+            <h2 class="about-us__title">ПУНКТУАЛЬНОСТЬ</h2>
+
+            <p class="about-us__text">
               Задача организации, в особенности же рамки и место обучения
               кадров влечет за собой.
             </p>
+
           </li>
 
-          <li class="comp-item">
-            <div class="icon-container">
-              <svg class="icon-about_as" width="70" height="70">
+          <li class="about-us__item">
+
+            <div class="about-us__icon-container">
+
+              <svg width="70" height="70">
                 <use href="./images/symbol-defs.svg#icon-diagram"></use>
               </svg>
+
             </div>
-            <h2 class="section-title">ПЛАНИРОВАНИЕ</h2>
-            <p class="text">
+
+            <h2 class="about-us__title">ПЛАНИРОВАНИЕ</h2>
+
+            <p class="about-us__text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
+
           </li>
 
-          <li class="comp-item">
-            <div class="icon-container">
-              <svg class="icon-about_as" width="70" height="70">
+          <li class="about-us__item">
+
+            <div class="about-us__icon-container">
+
+              <svg width="70" height="70">
                 <use href="./images/symbol-defs.svg#icon-astronaut"></use>
               </svg>
+
             </div>
-            <h2 class="section-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h2>
-            <p class="text">
+
+            <h2 class="about-us__title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h2>
+
+            <p class="about-us__text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий
             </p>
+
           </li>
+
         </ul>
+
       </div>
+
     </section>
 
     <!-- Чем мы занимаемся -->
@@ -216,6 +244,7 @@
               <img src="./images/ProductDesinger-354.jpg" alt="альтернативный текст" />
 
             </picture>
+
             <h3 class="comand-initials">Игорь Демьяненко</h3>
             <p class="icon-item">Product Designer</p>
 
