--- a/index.html
+++ b/index.html
@@ -230,16 +230,22 @@
             <picture>
 
               <source srcset="./images/ProductDesinger-450.jpg 450w,
-                              ./images/ProductDesinger-450-2x.jpg 900w" media="(max-width:767px)"
-                sizes="(min-width:480px) 450px,100vw">
+                              ./images/ProductDesinger-450-2x.jpg 900w"
+
+                              media="(max-width:767px)"
+                              sizes="(max-width:767px) 450px,100vw">
 
               <source srcset="./images/ProductDesinger-354.jpg 354w,
-                              ./images/ProductDesinger-354-2x.jpg 708w" media="(min-width:768px)"
-                sizes="(min-width:768px) 354px,100vw">
+                              ./images/ProductDesinger-354-2x.jpg 708w" 
+
+                              media="(min-width:768px) and (max-width:1199px)"
+                              sizes="(min-width:768px) 354px,100vw">
 
               <source srcset="./images/ProductDesinger-270.jpg 270w,
-                              ./images/ProductDesinger-270-2x.jpg 540w" media="(min-width:1200px)"
-                sizes="(min-width:1200px) 450px,100vw">
+                              ./images/ProductDesinger-270-2x.jpg 540w" 
+
+                              media="(min-width:1200px)"
+                              sizes="(min-width:1200px) 270px,100vw">
 
               <img src="./images/ProductDesinger-354.jpg" alt="альтернативный текст" />
 
@@ -281,16 +287,22 @@
             <picture>
 
               <source srcset="./images/FrontendDeveloper-450.jpg 450w,
-                              ./images/FrontendDeveloper-450-2x.jpg 900w" media="(max-width:767px)"
-                sizes="(min-width:480px) 450px,100vw">
+                              ./images/FrontendDeveloper-450-2x.jpg 900w"
+
+                               media="(max-width:767px)"
+                               sizes="(min-width:320px) 450px,100vw">
 
               <source srcset="./images/FrontendDeveloper-354.jpg 354w,
-                              ./images/FrontendDeveloper-354-2x.jpg 708w" media="(min-width:768px)"
-                sizes="(min-width:768px) 354px,100vw">
+                              ./images/FrontendDeveloper-354-2x.jpg 708w"
+
+                               media="(min-width:768px) and (max-width:1199px)"
+                               sizes="(min-width:768px) 354px,100vw">
 
               <source srcset="./images/FrontendDeveloper-270.jpg 270w,
-                              ./images/FrontendDeveloper-270-2x.jpg 540w" media="(min-width:1200px)"
-                sizes="(min-width:1200px) 450px,100vw">
+                              ./images/FrontendDeveloper-270-2x.jpg 540w" 
+
+                               media="(min-width:1200px)"
+                               sizes="(min-width:1200px) 270px,100vw">
 
               <img src="./images/FrontendDeveloper-354.jpg" alt="альтернативный текст" />
 
@@ -330,16 +342,22 @@
             <picture>
 
               <source srcset="./images/Marketing-450.jpg 450w,
-                              ./images/Marketing-450-2x.jpg 900w" media="(max-width:767px)"
-                sizes="(min-width:480px) 450px,100vw">
+                              ./images/Marketing-450-2x.jpg 900w" 
+
+                              media="(max-width:767px)"
+                              sizes="(min-width:480px) 450px,100vw">
 
               <source srcset="./images/Marketing-354.jpg 354w,
-                              ./images/Marketing-354-2x.jpg 708w" media="(min-width:768px)"
-                sizes="(min-width:768px) 354px,100vw">
+                              ./images/Marketing-354-2x.jpg 708w"
+
+                              media="(min-width:768px) and (max-width:1199px)"
+                              sizes="(min-width:768px) 354px,100vw">
 
               <source srcset="./images/Marketing-270.jpg 270w,
-                              ./images/Marketing-270-2x.jpg 540w" media="(min-width:1200px)"
-                sizes="(min-width:1200px) 450px,100vw">
+                              ./images/Marketing-270-2x.jpg 540w"
+
+                              media="(min-width:1200px)"
+                              sizes="(min-width:1200px) 270px,100vw">
 
               <img src="./images/Marketing-354.jpg" alt="альтернативный текст" />
 
@@ -378,16 +396,22 @@
             <picture>
 
               <source srcset="./images/UiDesigner-450.jpg 450w,
-                              ./images/UiDesigner-450-2x.jpg 900w" media="(max-width:767px)"
-                sizes="(min-width:480px) 450px,100vw">
+                              ./images/UiDesigner-450-2x.jpg 900w"
+
+                               media="(max-width:767px)"
+                               sizes="(min-width:480px) 450px,100vw">
 
               <source srcset="./images/UiDesigner-354.jpg 354w,
-                              ./images/UiDesigner-354-2x.jpg 708w" media="(min-width:768px)"
-                sizes="(min-width:768px) 354px,100vw">
+                              ./images/UiDesigner-354-2x.jpg 708w" 
+
+                              media="(min-width:768px) and (max-width:1199px)"
+                              sizes="(min-width:768px) 354px,100vw">
 
               <source srcset="./images/UiDesigner-270.jpg 270w,
-                              ./images/UiDesigner-270-2x.jpg 540w" media="(min-width:1200px)"
-                sizes="(min-width:1200px) 450px,100vw">
+                              ./images/UiDesigner-270-2x.jpg 540w" 
+
+                              media="(min-width:1200px)"
+                              sizes="(min-width:1200px) 270px,100vw">
 
               <img src="./images/UiDesigner-354.jpg" alt="альтернативный текст" />
 
