--- a/portfolio.html
+++ b/portfolio.html
@@ -132,16 +132,22 @@
                             <picture>
 
                                 <source srcset="./images/Portfolio/Portfolio1-450.jpg 450w,
-                                               ./images/Portfolio/Portfolio1-450-2x.jpg 900w" media="(max-width:767px)"
-                                    sizes="(min-width:480px) 450px,100vw">
+                                               ./images/Portfolio/Portfolio1-450-2x.jpg 900w"
+
+                                                media="(max-width:767px)"
+                                                sizes="(min-width:480px) 450px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio1-354.jpg 354w,
-                                               ./images/Portfolio/Portfolio1-354-2x.jpg 708w" media="(min-width:768px)"
-                                    sizes="(min-width:768px) 354px,100vw">
+                                               ./images/Portfolio/Portfolio1-354-2x.jpg 708w" 
+
+                                                media="(min-width:768px) and (max-width:1199px)"
+                                                sizes="(min-width:768px) 354px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio1-370.jpg 370w,
                                                ./images/Portfolio/Portfolio1-370-2x.jpg 740w"
-                                    media="(min-width:1200px)" sizes="(min-width:1200px) 370px,100vw">
+
+                                                 media="(min-width:1200px)"
+                                                 sizes="(min-width:1200px) 370px,100vw">
 
                                 <img src="./images/Portfolio/Portfolio1-354.jpg" alt="альтернативный текст" />
 
@@ -169,15 +175,21 @@
 
                                 <source srcset="./images/Portfolio/Portfolio2-450.jpg 450w,
                                                 ./images/Portfolio/Portfolio2-450-2x.jpg 900w"
-                                    media="(max-width:767px)" sizes="(min-width:480px) 450px,100vw">
+
+                                                media="(max-width:767px)" 
+                                                sizes="(min-width:480px) 450px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio2-354.jpg 354w,
                                                 ./images/Portfolio/Portfolio2-354-2x.jpg 708w"
-                                    media="(min-width:768px)" sizes="(min-width:768px) 354px,100vw">
+
+                                                media="(min-width:768px) and (max-width:1199px)" 
+                                                sizes="(min-width:768px) 354px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio2-370.jpg 370w,
                                                 ./images/Portfolio/Portfolio2-370-2x.jpg 740w"
-                                    media="(min-width:1200px)" sizes="(min-width:1200px) 370px,100vw">
+
+                                                 media="(min-width:1200px)" 
+                                                 sizes="(min-width:1200px) 370px,100vw">
 
                                 <img src="./images/Portfolio/Portfolio2-354.jpg" alt="альтернативный текст" />
 
@@ -205,16 +217,22 @@
                             <picture>
 
                                 <source srcset="./images/Portfolio/Portfolio3-450.jpg 450w,
-                                               ./images/Portfolio/Portfolio3-450-2x.jpg 900w" media="(max-width:767px)"
-                                    sizes="(min-width:480px) 450px,100vw">
+                                               ./images/Portfolio/Portfolio3-450-2x.jpg 900w" 
+
+                                               media="(max-width:767px)"
+                                               sizes="(min-width:480px) 450px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio3-354.jpg 354w,
-                                               ./images/Portfolio/Portfolio3-354-2x.jpg 708w" media="(min-width:768px)"
-                                    sizes="(min-width:768px) 354px,100vw">
+                                               ./images/Portfolio/Portfolio3-354-2x.jpg 708w" 
+
+                                               media="(min-width:768px) and (max-width:1199px)"
+                                               sizes="(min-width:768px) 354px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio3-370.jpg 370w,
                                                ./images/Portfolio/Portfolio3-370-2x.jpg 740w"
-                                    media="(min-width:1200px)" sizes="(min-width:1200px) 370px,100vw">
+
+                                               media="(min-width:1200px)" 
+                                               sizes="(min-width:1200px) 370px,100vw">
 
                                 <img src="./images/Portfolio/Portfolio3-354.jpg" alt="альтернативный текст" />
 
@@ -242,16 +260,22 @@
                             <picture>
 
                                 <source srcset="./images/Portfolio/Portfolio4-450.jpg 450w,
-                                               ./images/Portfolio/Portfolio4-450-2x.jpg 900w" media="(max-width:767px)"
-                                    sizes="(min-width:480px) 450px,100vw">
+                                               ./images/Portfolio/Portfolio4-450-2x.jpg 900w" 
+
+                                               media="(max-width:767px)"
+                                                sizes="(min-width:480px) 450px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio4-354.jpg 354w,
-                                               ./images/Portfolio/Portfolio4-354-2x.jpg 708w" media="(min-width:768px)"
-                                    sizes="(min-width:768px) 354px,100vw">
+                                               ./images/Portfolio/Portfolio4-354-2x.jpg 708w"
+
+                                                media="(min-width:768px) and (max-width:1199px)"
+                                                sizes="(min-width:768px) 354px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio4-370.jpg 370w,
                                                ./images/Portfolio/Portfolio4-370-2x.jpg 740w"
-                                    media="(min-width:1200px)" sizes="(min-width:1200px) 370px,100vw">
+
+                                                media="(min-width:1200px)" 
+                                                sizes="(min-width:1200px) 370px,100vw">
 
                                 <img src="./images/Portfolio/Portfolio4-354.jpg" alt="альтернативный текст" />
 
@@ -279,16 +303,22 @@
                             <picture>
 
                                 <source srcset="./images/Portfolio/Portfolio5-450.jpg 450w,
-                                               ./images/Portfolio/Portfolio5-450-2x.jpg 900w" media="(max-width:767px)"
-                                    sizes="(min-width:480px) 450px,100vw">
+                                               ./images/Portfolio/Portfolio5-450-2x.jpg 900w"
+
+                                                media="(max-width:767px)"
+                                                sizes="(min-width:480px) 450px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio5-354.jpg 354w,
-                                               ./images/Portfolio/Portfolio5-354-2x.jpg 708w" media="(min-width:768px)"
-                                    sizes="(min-width:768px) 354px,100vw">
+                                               ./images/Portfolio/Portfolio5-354-2x.jpg 708w" 
+
+                                               media="(min-width:768px) and (max-width:1199px)"
+                                                sizes="(min-width:768px) 354px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio5-370.jpg 370w,
                                                ./images/Portfolio/Portfolio5-370-2x.jpg 740w"
-                                    media="(min-width:1200px)" sizes="(min-width:1200px) 370px,100vw">
+
+                                                media="(min-width:1200px)"
+                                                 sizes="(min-width:1200px) 370px,100vw">
 
                                 <img src="./images/Portfolio/Portfolio5-354.jpg" alt="альтернативный текст" />
 
@@ -317,15 +347,21 @@
 
                                 <source srcset="./images/Portfolio/Portfolio6-450.jpg 450w,
                                                 ./images/Portfolio/Portfolio6-450-2x.jpg 900w"
-                                    media="(max-width:767px)" sizes="(min-width:480px) 450px,100vw">
+
+                                                media="(max-width:767px)"
+                                                 sizes="(min-width:480px) 450px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio6-354.jpg 354w,
                                                 ./images/Portfolio/Portfolio6-354-2x.jpg 708w"
-                                    media="(min-width:768px)" sizes="(min-width:768px) 354px,100vw">
+
+                                                media="(min-width:768px) and (max-width:1199px)" 
+                                                sizes="(min-width:768px) 354px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio6-370.jpg 370w,
                                                 ./images/Portfolio/Portfolio6-370-2x.jpg 740w"
-                                    media="(min-width:1200px)" sizes="(min-width:1200px) 370px,100vw">
+
+                                                 media="(min-width:1200px)"
+                                                  sizes="(min-width:1200px) 370px,100vw">
 
                                 <img src="./images/Portfolio/Portfolio6-354.jpg" alt="альтернативный текст" />
 
@@ -354,15 +390,21 @@
 
                                 <source srcset="./images/Portfolio/Portfolio7-450.jpg 450w,
                                                 ./images/Portfolio/Portfolio7-450-2x.jpg 900w"
-                                    media="(max-width:767px)" sizes="(min-width:480px) 450px,100vw">
+
+                                                 media="(max-width:767px)" 
+                                                 sizes="(min-width:480px) 450px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio7-354.jpg 354w,
                                                 ./images/Portfolio/Portfolio7-354-2x.jpg 708w"
-                                    media="(min-width:768px)" sizes="(min-width:768px) 354px,100vw">
+
+                                                 media="(min-width:768px) and (max-width:1199px)" 
+                                                 sizes="(min-width:768px) 354px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio7-370.jpg 370w,
                                                 ./images/Portfolio/Portfolio7-370-2x.jpg 740w"
-                                    media="(min-width:1200px)" sizes="(min-width:1200px) 370px,100vw">
+
+                                                 media="(min-width:1200px)" 
+                                                 sizes="(min-width:1200px) 370px,100vw">
 
                                 <img src="./images/Portfolio/Portfolio7-354.jpg" alt="альтернативный текст" />
 
@@ -391,15 +433,21 @@
 
                                 <source srcset="./images/Portfolio/Portfolio8-450.jpg 450w,
                                                 ./images/Portfolio/Portfolio8-450-2x.jpg 900w"
-                                    media="(max-width:767px)" sizes="(min-width:480px) 450px,100vw">
+
+                                                 media="(max-width:767px)"
+                                                  sizes="(min-width:480px) 450px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio8-354.jpg 354w,
                                                 ./images/Portfolio/Portfolio8-354-2x.jpg 708w"
-                                    media="(min-width:768px)" sizes="(min-width:768px) 354px,100vw">
+
+                                                 media="(min-width:768px) and (max-width:1199px)"
+                                                 sizes="(min-width:768px) 354px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio8-370.jpg 370w,
                                                 ./images/Portfolio/Portfolio8-370-2x.jpg 740w"
-                                    media="(min-width:1200px)" sizes="(min-width:1200px) 370px,100vw">
+
+                                                 media="(min-width:1200px)" 
+                                                 sizes="(min-width:1200px) 370px,100vw">
 
                                 <img src="./images/Portfolio/Portfolio8-354.jpg" alt="альтернативный текст" />
 
@@ -427,16 +475,22 @@
                             <picture>
 
                                 <source srcset="./images/Portfolio/Portfolio9-450.jpg 450w,
-                                               ./images/Portfolio/Portfolio9-450-2x.jpg 900w" media="(max-width:767px)"
-                                    sizes="(min-width:480px) 450px,100vw">
+                                               ./images/Portfolio/Portfolio9-450-2x.jpg 900w"
+
+                                                media="(max-width:767px)"
+                                                sizes="(min-width:480px) 450px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio9-354.jpg 354w,
-                                               ./images/Portfolio/Portfolio9-354-2x.jpg 708w" media="(min-width:768px)"
-                                    sizes="(min-width:768px) 354px,100vw">
+                                               ./images/Portfolio/Portfolio9-354-2x.jpg 708w"
+
+                                                media="(min-width:768px) and (max-width:1199px)"
+                                                sizes="(min-width:768px) 354px,100vw">
 
                                 <source srcset="./images/Portfolio/Portfolio9-370.jpg 370w,
                                                ./images/Portfolio/Portfolio9-370-2x.jpg 740w"
-                                    media="(min-width:1200px)" sizes="(min-width:1200px) 370px,100vw">
+
+                                               media="(min-width:1200px)" 
+                                               sizes="(min-width:1200px) 370px,100vw">
 
                                 <img src="./images/Portfolio/Portfolio9-354.jpg" alt="альтернативный текст" />
 
