--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <nav class="main-nav">
 
-        <a href="./" class="logo">Web<span class="page-header__logo--black">Studio</span></a>
+        <a href="./" class="logo">Web<span class="logo--black">Studio</span></a>
 
         <button type="button" class="menu-button " data-menu-button>
 
